movieapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieapi
  labels:
    app: movieapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movieapi
  template:
    metadata:
      labels:
        app: movieapi
    spec: 
      containers: 
      - name: movieapi
        image: movieapi
        imagePullPolicy: IfNotPresent      
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: movieapi-service
spec:
  selector:
    app: movieapi
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30000
