movieapi/movieapi-ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
  name: movieapi-ingress

spec:
  rules:
    - host: movieapi.local
   
      http:   
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movieapi-service
                port:
                  number: 5000
